ROADMAP 66 step 3b: install/build-time code execution in all nine language skills, pinned (floor 32) (#450)